@@ -1,6 +1,7 @@
 Revision history for exact::conf
 
 {{$NEXT}}
+        - Add ability to skip Config::App import
 
 1.05      2021-01-13 11:14:16-08:00 America/Los_Angeles
         - Override some minimum version reqs in dist.ini
